--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="img/favicon.png" type="image/png" />
 
-    <title>Webpack</title>
+    <title>AminoacidCalc</title>
   </head>
   <body>
     <nav class="nav-bar">
@@ -25,6 +25,7 @@
             type="text"
             name="search"
             placeholder="Search..."
+            autocomplete="off"
           />
         </div> </side
       ><side></side>
